# CanIReach

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  package-lock.json  package.json  test_config.json
.cargo/: config.toml
crates/canireach-core/: Cargo.toml
crates/canireach-core/src/: error.rs  lib.rs  tests.rs
crates/canireach-core/src/config/: mod.rs  probe_config.rs
crates/canireach-core/src/models/: mod.rs  network_profile.rs  probe_log.rs  probe_result.rs  target.rs  target_group.rs
crates/canireach-core/src/probe/: engine.rs  http_probe.rs  mod.rs  redirect_tracker.rs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/config/: groups.json  history.db  profiles.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  error.rs  lib.rs
src-tauri/src/commands/: analyzer.rs  block_page.rs  continuous_monitor.rs  groups.rs  history.rs  investigation.rs  mod.rs  operations.rs  performance_commands.rs  privacy_commands.rs  probes.rs  profiles.rs  schedules.rs  settings.rs  targets.rs  traceroute.rs  updater.rs
src-tauri/src/config/: groups_loader.rs  mod.rs  paths.rs  profiles_loader.rs  schedules_loader.rs  target_loader.rs
src-tauri/src/events/: mod.rs  probe_events.rs
src-tauri/src/intelligence/: collector.rs  domain_util.rs  mod.rs
src-tauri/src/intelligence/models/: block_page.rs  investigation.rs  mod.rs  operation.rs
src-tauri/src/monitoring/: analyzer.rs  mod.rs  observer.rs
src-tauri/src/monitoring/alerts/: mod.rs
src-tauri/src/monitoring/continuous/: mod.rs
src-tauri/src/monitoring/incidents/: mod.rs
src-tauri/src/monitoring/models/: mod.rs  run.rs  schedule.rs
src-tauri/src/monitoring/persistence/: mod.rs
src-tauri/src/monitoring/scheduler/: mod.rs
src-tauri/src/performance/: budget.rs  latency.rs  mod.rs  models.rs  throughput.rs
src-tauri/src/privacy_diagnostics/: client.rs  dns.rs  egress.rs  mod.rs  models.rs  posture.rs  tor.rs
src-tauri/src/traceroute/: engine.rs  mod.rs  models.rs  parser.rs
(+81 files in other folders)
